# director-general

./: .gitignore  LEARNINGS.md  LICENSE  PROGRESS.md  README.md  build-rust.cmd  dev.cmd  index.html  overlay.html  package-lock.json  package.json  release.cmd  setup-prereqs.ps1  vite.config.ts
.github/workflows/: build.yml
scripts/: screenshot-screen.ps1  screenshot-ui.mjs  screenshot-window.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: record_test.rs  synth_pipeline_test.rs  transcribe_test.rs  verify_wav.rs
src-tauri/src/: active_window.rs  audio.rs  caps_hook.rs  hotkey.rs  lib.rs  main.rs  paste.rs  state.rs  storage.rs  transcribe.rs
src-tauri/wix/: cuda-runtime.wxs
src/components/: HistoryList.tsx  HotkeyPicker.tsx  Settings.tsx  StatusIndicator.tsx
src/lib/: ipc.ts
src/overlay/: Overlay.tsx  main.tsx
