[package]
name = "director-general"
version = "0.1.0"
description = "Local voice typing for Windows (Whisper + Tauri)"
authors = ["Bossnet"]
edition = "2021"

[lib]
name = "director_general_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# Enable CUDA acceleration for whisper.cpp. Requires CUDA toolkit on the build machine.
# CI builds the CPU-only variant by default for portability.
cuda = ["whisper-rs/cuda"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"

# Whisper local inference (whisper.cpp bindings)
whisper-rs = "0.16"

# Audio capture + WAV writing + resampling
cpal = "0.15"
hound = "3.5"
rubato = "0.16"

# Keystroke simulation (auto-paste Ctrl+V)
enigo = "0.5"

# Misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
num_cpus = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
